--- a/app/views/pictures/api.html.erb
+++ b/app/views/pictures/api.html.erb
@@ -1,3 +1,3 @@
-<%= @response['data']['link'] %>
-
-<%= image_tag("#{@response['data']['link']}") %>
+<%= @link.each do |link| %>
+  <img src="<%= link %>" alt="">
+<% end %>
