--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Pictures</h1>
 <%= link_to "New Picture", "/pictures/new" %>
+<%= link_to "API", "/api/pictures" %>
 
 <% @pictures.each do |picture| %>
   <p><%= picture.title %>, <%= picture.artist %></p>
