--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Picture</h1>
+<!-- <h1>Edit Picture</h1>
 
 <p>
   <%= link_to "Back", @picture %>
@@ -20,4 +20,19 @@
   <p>
     <%= f.submit %>
   </p>
-<% end %>
+<% end %> -->
+
+
+<div class="mdl-layout__content">
+
+
+  <div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--12-col">
+      <div class="mdl-typography--display-1">
+        <h3>Edit a Photo</h3>
+      </div>
+      <%= render "form" %>
+
+    </div>
+  </div>
+</div>
