--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,30 +1,42 @@
-<h1>Pictures</h1>
-<%= link_to "New Picture", "/pictures/new" %>
-<%= link_to "API", "/api/pictures" %>
-<%= link_to "Twitter OAuth", '/auth/twitter' %>
-<%= link_to "Logout of Twitter", logout_path, method: :delete %>
 
-<% if current_user %>
-  <div class="page-header">
-    <h1>Here is some info about you...</h1>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <ul>
-        <li><strong>Name:</strong> <%= current_user.name %></li>
-        <li><strong>Provider:</strong> <%= current_user.provider %></li>
-        <li><strong>uID:</strong> <%= current_user.uid %></li>
-        <li><strong>Location:</strong> <%= current_user.location %></li>
-        <li><strong>Avatar URL:</strong> <%= current_user.image_url %></li>
-        <li><strong>URL:</strong> <%= current_user.url %></li>
-      </ul>
+  <main class="mdl-layout__content">
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell--12-col">
+        <h1>Pictures</h1>
+
+        <% if current_user %>
+          <div class="page-header">
+            <h1>Here is some info about you...</h1>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <ul>
+                <li><strong>Name:</strong> <%= current_user.name %></li>
+                <li><strong>Provider:</strong> <%= current_user.provider %></li>
+                <li><strong>uID:</strong> <%= current_user.uid %></li>
+                <li><strong>Location:</strong> <%= current_user.location %></li>
+                <li><strong>Avatar URL:</strong> <%= current_user.image_url %></li>
+                <li><strong>URL:</strong> <%= current_user.url %></li>
+              </ul>
+            </div>
+          </div>
+        <% else %>
+        <div>
+          <p><%= 'No Twitter User Loged In' %></p>
+        </div>
+        <% end %>
+      </div>
     </div>
-  </div>
-<% else %>
-  <%= 'error' %>
-<% end %>
 
-<% @pictures.each do |picture| %>
-  <p><%= picture.title %>, <%= picture.artist %></p>
-  <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
-<% end %>
+    <div class="mdl-grid">
+      <% @pictures.each do |picture| %>
+        <div class="mdl-grid mdl-cell--4-col">
+          <h5><%= picture.title %>, <%= picture.artist %></h5>
+          <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
+        </div>
+      <% end %>
+    </div>
+
+    </div>
+  </main>
+</div>
